# vault-cli

./: Cargo.toml  LICENSE  README  vault.json
src/: main.rs
