[package]
name = "vault-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"        # AES encryption crate
rand = "0.8"            # For generating nonces & keys
base64 = "0.21"         # For saving encrypted data as strings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }